# learning-investment-strategies

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: AI产业链全景投资研究报告_物理AI与具身智能专题.docx  AI基础设施与能源转型投资研究报告.docx  hermes-stock-monitor-technical-design.md  国产算力产业链与Token经济学深度研究报告.docx  收盘监控复盘_2026-05-29.md
evals/: README.md
framework/: README.md  ai-investment-cycle.md  contradiction-policy.md  learning-update-protocol.md  livestock-classification.md  market-cycle-framework.md  market-participant-framework.md  methodology-review-protocol.md  output-contracts.md  sector-diffusion-framework.md  stock-analysis-playbook.md  technical-analysis-framework.md
knowledge/: learn-index.md
methodology/: decision-flow.md  f10-fundamental-analysis.md  index.md  market-cycle.md  position-risk.md  sector-rotation.md  stock-selection.md  technical-analysis.md
migration/: legacy-manifest.json  legacy-source-map.md
reports/: methodology-review-20260529.md
scripts/: __init__.py  bilibili_notify.py  build_indexes.py  extract_mentions.py  fetch_bilibili_up.py  fetch_bilibili_up_v2.py  find_unprocessed.py  hermes_stock_monitor.py  hermes_stock_monitor_agent.py  hermes_stock_monitor_analysis.py  hermes_stock_monitor_daily_review.py  lint_knowledge.py  migrate_legacy_up_raw.py  stock_monitor.py  sync_glmv_stock_analyst.py
sources/: processed-log.md
tests/: test_claim_schema.py  test_documentation_contracts.py  test_find_unprocessed.py  test_glm_vendor.py  test_index_builder.py  test_knowledge_linter.py  test_legacy_migration.py  test_mention_extractor.py  (+4 more)
(+666 files in other folders)
